tests/max_encoded_len_ui/unsupported_variant.stderr
error[E0599]: no function or associated item named `max_encoded_len` found for struct `NotMel` in the current scope
 --> tests/max_encoded_len_ui/unsupported_variant.rs:8:9
  |
4 | struct NotMel;
  | ------------- function or associated item `max_encoded_len` not found for this struct
...
8 |     NotMel(NotMel),
  |            ^^^^^^ function or associated item not found in `NotMel`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `max_encoded_len`, perhaps you need to implement it:
          candidate #1: `MaxEncodedLen`
